add selector, renamed posts in post

--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <button [routerLink]="''">Messages</button>
-  <button [routerLink]="'posts'">Posts</button>
+  <button [routerLink]="'post'">Post</button>
 </div>
 
 <router-outlet></router-outlet>
