--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,6 +1,7 @@
 <div>
   <button [routerLink]="''">Messages</button>
   <button [routerLink]="'post'">Post</button>
+  <button [routerLink]="'books'">Books</button>
 </div>
 
 <router-outlet></router-outlet>
