--- a/src/pages/books/books.component.html
+++ b/src/pages/books/books.component.html
@@ -1,14 +1,20 @@
-<div *ngIf="books$ | async as books">
-	<ul *ngFor="let book of books">
-		<li>
-      <h2>{{book.volumeInfo.title}}</h2>
-      <img [src]='book.volumeInfo?.imageLinks?.thumbnail'>
-      <h3>Author: {{book.volumeInfo.authors}}</h3>
-      <h4>Publisher: {{book.volumeInfo.publisher}}</h4>
-      <h4>Published Date: {{book.volumeInfo.publishedDate}}</h4>
-      <p>{{book.volumeInfo.description}}</p>
+<div *ngIf="books$ | async as booksList">
+  <ng-container *ngIf="booksList.isLoading; else showList">
+    <div class="lds-ripple"><div></div><div></div></div>
+  </ng-container>
 
-      <h5>Categories: {{book.volumeInfo.categories}}</h5>
-    </li>
-  </ul>
+  <ng-template #showList>
+    <ul *ngFor="let book of booksList.books">
+      <li>
+        <h2>{{book.volumeInfo.title}}</h2>
+        <img [src]='book.volumeInfo?.imageLinks?.thumbnail'>
+        <h3>Author: {{book.volumeInfo.authors}}</h3>
+        <h4>Publisher: {{book.volumeInfo.publisher}}</h4>
+        <h4>Published Date: {{book.volumeInfo.publishedDate}}</h4>
+        <p>{{book.volumeInfo.description}}</p>
+  
+        <h5>Categories: {{book.volumeInfo.categories}}</h5>
+      </li>
+    </ul>
+  </ng-template>
 </div>
