--- a/src/pages/message/message.component.html
+++ b/src/pages/message/message.component.html
@@ -1,8 +1,8 @@
 
 <h1>Message: </h1>
 
-<div *ngIf="message$ | async">
-  {{message$ | async}}
+<div *ngrxLet="message$ as message">
+  {{message}}
 
   <div>
     <button (click)="setMessage('FRENCH')">French</button>
