--- a/src/pages/post/post.component.html
+++ b/src/pages/post/post.component.html
@@ -1,7 +1,7 @@
 <div>
   <h1>Post: </h1>
   
-  <div *ngIf="post$ | async as p">
+  <div *ngrxLet="post$ as p">
     <div>
       <h2>Title: {{ p.text }}</h2>
       <h3>Votes: {{ p.likes }}</h3>
